--- a/index.html
+++ b/index.html
@@ -9,48 +9,48 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/chroma-js/2.4.2/chroma.min.js" integrity="sha512-zInFF17qBFVvvvFpIfeBzo7Tj7+rQxLeTJDmbxjBz5/zIr89YVbTNelNhdTT+/DCrxoVzBeUPVFJsczKbB7sew==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <title>ColorGen</title>
   </head>
   <body>
 
      <div class="col">
-      <h2>Text</h2>
+      <h2></h2>
 
       <button>
-        <i class="fa-solid fa-lock"></i>
-        <!-- <i class="fa-solid fa-lock-open"></i> -->
+        <i class="fa-solid fa-lock-open"></i>
       </button>
      </div>
 
      <div class="col">
-      <h2>Text</h2>
+      <h2></h2>
 
       <button>
-        <i class="fa-solid fa-lock"></i>
+        <i class="fa-solid fa-lock-open"></i>
       </button>
      </div>
 
      <div class="col">
-      <h2>Text</h2>
+      <h2></h2>
 
       <button>
-        <i class="fa-solid fa-lock"></i>
+        <i class="fa-solid fa-lock-open"></i>
       </button>
      </div>
 
      <div class="col">
-      <h2>Text</h2>
+      <h2></h2>
 
       <button>
-        <i class="fa-solid fa-lock"></i>
+        <i class="fa-solid fa-lock-open"></i>
       </button>
      </div>
 
      <div class="col">
-      <h2>Text</h2>
+      <h2></h2>
 
       <button>
-        <i class="fa-solid fa-lock"></i>
+        <i class="fa-solid fa-lock-open"></i>
       </button>
      </div>
 
