feat: add copy text to clipboard

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <body>
 
      <div class="col">
-      <h2></h2>
+      <h2 data-type="сopy"></h2>
 
       <button data-type="lock">
         <i class="fa-solid fa-lock-open" data-type="lock"></i>
@@ -23,7 +23,7 @@
      </div>
 
      <div class="col">
-      <h2></h2>
+      <h2 data-type="сopy"></h2>
 
       <button data-type="lock">
         <i class="fa-solid fa-lock-open" data-type="lock"></i>
@@ -31,7 +31,7 @@
      </div>
 
      <div class="col">
-      <h2></h2>
+      <h2 data-type="сopy"></h2>
 
       <button data-type="lock">
         <i class="fa-solid fa-lock-open" data-type="lock"></i>
@@ -39,7 +39,7 @@
      </div>
 
      <div class="col">
-      <h2></h2>
+      <h2 data-type="сopy"></h2>
 
       <button data-type="lock">
         <i class="fa-solid fa-lock-open" data-type="lock"></i>
@@ -47,7 +47,7 @@
      </div>
 
      <div class="col">
-      <h2></h2>
+      <h2 data-type="сopy"></h2>
 
       <button data-type="lock">
         <i class="fa-solid fa-lock-open" data-type="lock"></i>
